2016-05-17  Daniel Hawkins
	* common/living.c: Change the depletion message for Con loss to differentiate
	  it from the permanent stat loss message.
	* server/monster.c: Additional optimizations in monster_compute_path().

2016-05-16  Daniel Hawkins
	* server/knowledge.c: Use malloc instead of calloc where all struct values
	  are subsequently set.

2016-05-15  Daniel Hawkins
	* server/monster.c: Remove redundant hp value check in monster_do_living().
	  Adjusted the run_away health check to use integers instead of floats.
	  This causes a 1-higher threshold for some maxhp values if run_away is
	  13, 21, 26, 39, 42, 52, 53, 59, 65, 71, 78, or 84.
	* server/attack.c: Made same adjustment to run_away calc as in monster.c.
	  In this manner, the rounding change occurs on both set and unset of FLAG_RUN_AWAY.
	* server/arch.c: Refactor some comparisons in is_type_valid() to use a switch statement.

2016-05-14  Daniel Hawkins
	* server/monster.c: Optimizations in monster_compute_path().
	* common/object.c: Reimplement the absdir() function to avoid loops.

2016-05-07  Daniel Hawkins
	* configure.ac: Change some of the "#" Comments to "dnl" comments.
	  They didn't need to go into the generated config file, so they won't be.

2016-05-02  Daniel Hawkins
	* doc/spell-docs/tome-of-magic.txt: Made some manual edits to effects of
	  spells. Still far from complete.
	* doc/spell-docs/Makefile.am: Tweaked the cleanfiles so that 'make clean'
	  cleans up all the generated PostScript files.

2016-01-11  Daniel Hawkins
	* doc/scripts/bonus_extract.pl: Refactor shop bonus to match actual implementation.

2015-12-25  Daniel Hawkins
	* configure.ac: Add check for librt and link it in if found.

2015-12-18  Daniel Hawkins
	* doc/spell-docs/spell-summary.ps: Removed. Replaced by a text file for
	  easier maintenance in the future.
	* doc/spell-docs/spell-summary.txt: New text file with the information
	  formerly stored in spell-summary.ps.